syntax = "proto3";

message Empty {}

message Id {
  string id = 1;
}

message Status {
  int32 code = 1;
  string message = 2;
}

message Books {
    repeated Book books = 1;
  }

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string resume = 4;
  string image_url = 5;
  string create_at = 6;
  string update_at = 7;
}

service BookService {
  rpc Get (Empty) returns (Books) {}
  rpc GetById(Id) returns (Book) {}
  rpc Insert(Book) returns (Status) {}
  rpc Update(Book) returns (Status) {}
  rpc Delete(Id) returns (Status) {}
}